Fixed find resources within jar file